--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MAIA | Chat Widget</title>
-    <script id="aima-chat-widget" data-app-id=0193b96a-14b4-8b74-9fd5-4dc0348e2731 data-api-hash=7e7c0ffc9a234f788ff7f59f62306cef async src="./script.js"></script>
+    <script id="aima-chat-widget" data-app-id="0193aa24-8dda-865c-b407-b956759d4855" data-api-hash="c0811b3c57534e44b20fa31d7ce48bf1" async src="./script.js"></script>
 </head>
 <body>
 </body>
